--- a/.github/workflows/neramtry-build-deploy-release.yml
+++ b/.github/workflows/neramtry-build-deploy-release.yml
@@ -23,6 +23,6 @@ jobs:
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }} # If you have multiple subscriptions this will switch to the correct subscription for you
           resourceGroupName: ${{ vars.NODEJS_RG }} # This doesn't have to be a variable, you could also hard code this, but ensure you create a variable if you use this approach
-          template: ./devops/dev/main.environment.bicep # This is an assumed directory structure ensure you change to the correct directory as well as rename environment to uat or prod etc
-          parameters: ./devops/dev/main.environment.bicepparam
+          template: ./devops/dev/main.dev.bicep # This is an assumed directory structure ensure you change to the correct directory as well as rename environment to uat or prod etc
+          parameters: ./devops/dev/main.dev.bicepparam
           failOnStdErr: false
