--- a/.github/workflows/neramtry-build-deploy-release.yml
+++ b/.github/workflows/neramtry-build-deploy-release.yml
@@ -1,60 +1,60 @@
-name: Deploy infrastructure and relase node js application
-## Here is an example snippet which you can use to deploy your infrastructure to Azure
+name: Deploy infrastructure and release Node.js application
 
 on:
   push:
     branches:
-      - main # Change this to any other branch you wish to deploy to
+      - main # Deploy only when changes are pushed to the 'main' branch
 
 jobs:
-  infrastructure: # You can change this name to anything else you wish
-    runs-on: ubuntu-latest # This could also be a windows machine e.g windows-latest
-
+  infrastructure:
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
     steps:
-      - uses: actions/checkout@v2 # This will obtain all the code for you in your repository
+      - uses: actions/checkout@v3 # Checkout the repository code
 
       - name: Setup Azure CLI
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }} # Ensure you create a AZURE_CREDENTIALS secret object in your Github secrets and variables
+          creds: ${{ secrets.AZURE_CREDENTIALS }} # Ensure AZURE_CREDENTIALS is added to GitHub Secrets
 
       - name: Deploy or update infrastructure
         uses: azure/arm-deploy@v1
         with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }} # If you have multiple subscriptions this will switch to the correct subscription for you
-          resourceGroupName: ${{ vars.NODEJS_RG }} # This doesn't have to be a variable, you could also hard code this, but ensure you create a variable if you use this approach
-          template: ./devops/dev/main.dev.bicep # This is an assumed directory structure ensure you change to the correct directory as well as rename environment to uat or prod etc
-          parameters: ./devops/dev/main.dev.bicepparam
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ vars.NODEJS_RG }} # Use a GitHub variable or hard-code the resource group
+          template: ./devops/dev/main.dev.bicep # Ensure the correct path to your Bicep file
+          parameters: ./devops/dev/main.dev.bicepparam # Ensure the correct path to your parameters file
           failOnStdErr: false
-  build:
-    needs: infrastructure
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      - name: Setup Node.js  version
-        uses: actions/setup-node@v1
+  build:
+    needs: infrastructure # Wait for the infrastructure job to complete
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3 # Checkout the repository code
+
+      - name: Setup Node.js version
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      
-      - name: npm install, build, and test
-        run: | 
-          cd myExpressApp
+
+      - name: Install dependencies, build, and test
+        run: |
+          cd myExpressApp # Adjust this directory path to match your project structure
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npm test --if-present
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+      - name: Upload artifact for deployment
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: ./myExpressApp
 
   deploy:
+    needs: build # Wait for the build job to complete
     runs-on: ubuntu-latest
-    needs: build
     environment:
-      name: 'Dev'
+      name: Dev # Define the deployment environment
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -68,9 +68,9 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ vars.DEVAPPNAME }}
-          package: .
+          app-name: ${{ vars.DEVAPPNAME }} # Use a GitHub variable or hard-code the app name
+          package: ./myExpressApp
