--- a/.github/workflows/neramtry-build-deploy-release.yml
+++ b/.github/workflows/neramtry-build-deploy-release.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install dependencies, build, and test
         run: |
-          cd neramtry # Adjust this directory path to match your project structure
+          cd neramExpressApp # Adjust this directory path to match your project structure
           npm install
           npm run build --if-present
           npm test --if-present
