--- a/neramExpressApp/package.json
+++ b/neramExpressApp/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.9.2",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
