--- a/neramExpressApp/package.json
+++ b/neramExpressApp/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
