--- a/.github/workflows/neramtry-build-deploy-release.yml
+++ b/.github/workflows/neramtry-build-deploy-release.yml
@@ -17,11 +17,13 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy or update infrastructure
-        run: |
-          az deployment group create \
-            --resource-group ${{ vars.NODEJS_RG }} \
-            --template-file ./devops/dev/main.dev.bicep \
-            --parameters @./devops/dev/main.dev.bicepparam
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ vars.NODEJS_RG }}
+          template: ./devops/dev/main.dev.bicep
+          parameters: ./devops/dev/main.dev.bicepparam
+          failOnStdErr: false
 
   build:
     needs: infrastructure
@@ -58,7 +60,6 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Dev
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
